--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -22,22 +22,34 @@
       <input id="cap_to_work_independent" type="text" class="span2" value="" data-slider-min="1" data-slider-max="5" data-slider-step="1" data-slider-value="[3,4]"/> 
 - profiles = [1,2,3,4,5,6,7]
 - index = -1
-- (profiles.count/3.0).ceil.times do |i|
-  .row{style: "margin-top: 75px"}
-    - 4.times do |index1|
-      - if index < profiles.count - 1
-        .col-md-3{style: "padding: 5px;" }
-          .card
-            .card-block
-              %h4.card-title= profiles[index = index + 1]
-              %h6.card-subtitle.text-muted Support card subtitle
-            %img{:alt => "Card image", :src => "http://www.komarketingassociates.com/images/2014/08/linkedin-default.png", style: "width: 150px;margin: 0 auto; display: block"}/
-            .card-block
-              %p.card-text Some quick example text to
-              %a.card-link{:href => "#"} Open
+#profiles
+  - (profiles.count/3.0).ceil.times do |i|
+    .row{style: "margin-top: 75px"}
+      - 4.times do |index1|
+        - if index < profiles.count - 1
+          .col-md-3{style: "padding: 5px;" }
+            .card
+              .card-block
+                %h4.card-title= profiles[index = index + 1]
+                %h6.card-subtitle.text-muted Support card subtitle
+              %img{:alt => "Card image", :src => "http://www.komarketingassociates.com/images/2014/08/linkedin-default.png", style: "width: 150px;margin: 0 auto; display: block"}/
+              .card-block
+                %p.card-text Some quick example text to
+                %a.card-link{:href => "#"} Open
 
 %script
-  $("#commitment").slider({});
-  $("#dec_making").slider({});
-  $("#team_work").slider({});
-  $("#cap_to_work_independent").slider({});
+  refreshPage = function(){
+  commitment_value = commitment_slider.getValue();
+  dec_making_value = dec_making_slider.getValue();
+  team_work_value = team_work_slider.getValue();
+  cap_to_work_independent_value = cap_to_work_independent_slider.getValue();
+  window.location.href = "profiles?" + "commitment_value=" + commitment_value + "&dec_making_value=" + dec_making_value + "&team_work_value=" + team_work_value + "&cap_to_work_independent_value=" + cap_to_work_independent_value
+  }
+  commitment_slider = $("#commitment").slider({}).on(
+  'slideStop', refreshPage).data('slider');
+  dec_making_slider = $("#dec_making").slider({}).on(
+  'slideStop', refreshPage).data('slider');
+  team_work_slider = $("#team_work").slider({}).on(
+  'slideStop', refreshPage).data('slider');
+  cap_to_work_independent_slider = $("#cap_to_work_independent").slider({}).on(
+  'slideStop', refreshPage).data('slider');
