--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title Prognosis
+    = Gon::Base.render_data
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
@@ -16,11 +17,13 @@
       .container-fluid
         / Brand and toggle get grouped for better mobile display
         .navbar-header
-          %a.navbar-brand{:href => "#"} Prognosis
+          %a.navbar-brand{:href => "/"} Prognosis
         / Collect the nav links, forms, and other content for toggling
         %ul.nav.navbar-nav
-          %li{:style => "padding-top: 10px;"}
-            = link_to "Upload Resume", profiles_upload_resume_path 
+          %li.nav-item
+            %a.nav-link{:href => profiles_upload_resume_path, :style => "padding-top: 10px;"} Upload Resume
+          %li.nav-item
+            %a.nav-link{:href => "/profiles", :style => "padding-top: 10px;"} Sourced
           %li
           <form class="form-inline pull-xs-right"><input class="form-control" type="text" placeholder="Search"><button class="btn btn-outline-info" type="submit">Search</button></form>
     %div{style: "padding: 0px 250px 0px 250px;"}
