--- a/app/views/profiles/upload_resume.html.haml
+++ b/app/views/profiles/upload_resume.html.haml
@@ -1,4 +1,5 @@
 .container
 	.row{:style=> "padding-top:10px;"}
-		= form_for profiles_resume_parser_path do |f|
+		= form_for Profile.new, {url: profiles_resume_parser_path} do |f|
 			=f.file_field :resume	
+			=submit_tag "Upload"
